<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Checkin</string>
    <string name="account_type">com.checkin.accounts</string>
    <string name="app_old_version_button_update">Update app</string>
    <string name="app_old_version_dialog_title">Update your app</string>
    <string name="app_old_version_dialog_message">Your app needs to be updated\nfrom the play store to use it.</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="tables_drawer_open">Open tables drawer</string>
    <string name="tables_drawer_close">Close tables drawer</string>
    <string name="appbar_scrolling_view_behavior" translatable="false">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="action_settings">Settings</string>
    <string name="action_search">Search</string>
    <string name="action_finish">Finish</string>
    <string name="action_filter">Filter Items</string>
    <string name="label_about">About Us</string>
    <string name="bbn_phone_view_behavior" translatable="false" tools:ignore="UnusedResources">it.sephiroth.android.library.bottomnavigation.BottomBehavior</string>
    <string name="bbn_tablet_view_behavior" translatable="false" tools:ignore="UnusedResources">it.sephiroth.android.library.bottomnavigation.TabletBehavior</string>
    <string name="bbn_default_view_behavior" translatable="false" tools:ignore="UnusedResources">it.sephiroth.android.library.bottomnavigation.BottomBehavior</string>
    <string name="bbn_badgeProvider" translatable="false" tools:ignore="UnusedResources">it.sephiroth.android.library.bottomnavigation.BadgeProvider</string>
    <string name="bbn_fab_default_behavior" translatable="false" tools:ignore="UnusedResources">it.sephiroth.android.library.bottomnavigation.FloatingActionButtonBehavior</string>
    <string name="shop_status_check">Check Status</string>
    <string name="home_text_qrscanner">Scan QR!</string>
    <string name="home_text_delivery">Delivery</string>
    <string name="home_text_offers">Offers</string>
    <string name="check_in_wallet">Check-In Wallet</string>
    <string name="home_text_dining">Dine In</string>
    <string name="text_add_notifications">Notifications</string>
    <string name="text_add_wallet">Wallet</string>
    <string name="text_add_post">Post</string>
    <string name="menu_drawer_open">Open Menu Cart drawer</string>
    <string name="menu_drawer_close">Close Menu Cart drawer</string>
    <string name="active_session">Active Session</string>
    <string name="facebook_app_id">150714782397445</string>
    <string name="fb_login_protocol_scheme">fb150714782397445</string>
    <string name="btn_cancel">Cancel</string>
    <string name="btn_save">Save</string>
    <string name="btn_edit">Edit</string>
    <string name="btn_remove">Remove</string>
    <string name="item_non_cancelable">Non-Cancelable</string>
    <string name="title_activity_shop_login">ShopLogin</string>
    <string name="title_activity_shop_create_account">ShopCreateAccount</string>
    <string name="title_add_member">You are with?</string>
    <string name="help">Help</string>
    <string name="title_checkin_privacy">Mark Your Presence</string>
    <string name="finish">done</string>
    <string name="title_create_business_account">Create Business Account</string>
    <string name="prefix_country_code">+91</string>
    <string name="notif_appbar_title">NOTIFICATIONS</string>
    <string name="notif_heading_unseen">New</string>
    <string name="notif_heading_seen">Seen</string>
    <string name="error_unavailable_network">No network available, please check your WiFi or Data connection.</string>
    <string name="no_geocoder_available">No geocoder available</string>
    <string name="fetch_address">Fetch address</string>
    <string name="address_found">Address found</string>
    <string name="status_searching">Searching…</string>
    <string name="status_search_not_found">No results matched.</string>
    <string name="no_address_found">Sorry, no address found</string>
    <string name="no_location_data_provided">No location data provided</string>
    <string name="service_not_available">Sorry, the service is not available</string>
    <string name="invalid_lat_long_used">Invalid latitude or longitude used</string>
    <string name="text_app_join">Enter</string>
    <string name="product_tag_line">When Ease meets Tech</string>
    <string name="error_authentication_google">Google authentication failed.</string>
    <string name="error_authentication_phone">Phone authentication failed.</string>
    <string name="error_authentication_facebook">Facebook authentication failed.</string>
    <string name="error_authentication">Unable to authenticate user.</string>
    <string name="error_api_invalid_response">Server sent an invalid response.</string>
    <string name="label_followers">Followers</string>
    <string name="label_checkins">Check Ins</string>
    <string name="label_reviews">Reviews</string>
    <string name="action_follow">Follow</string>
    <string name="info_requested">Requested</string>
    <string name="action_message">Message</string>
    <string name="status_loading">Working hard to fetch your data…</string>
    <string name="action_profile_edit">Edit Profile</string>
    <string name="info_following">Following</string>
    <string name="action_reject">Reject</string>
    <string name="action_accept">Accept</string>
    <string name="title_shop_basic_info">Basic Info</string>
    <string name="action_next">Next</string>
    <string name="action_logout">Logout</string>
    <string name="data_unavailable">Loading…</string>
    <string name="positive_yes">Yes</string>
    <string name="negative_no">No</string>
    <string name="title_shop_aspects">Aspects</string>
    <string name="role_prompt">Choose a role</string>
    <string name="action_shop_members">Members</string>
    <string name="action_shop_insights">Insights</string>
    <string name="action_notification">Notification</string>
    <string name="action_cuisine">Cuisines</string>
    <string name="action_call">Call</string>
    <string name="action_navigate">Navigate</string>
    <string name="title_member_assign_role">Assign Role</string>
    <string name="symbol_currency_rupee">&#x20B9;</string>
    <string name="format_currency_rupee">&#x20B9; %s</string>
    <string name="format_session_benefits_savings">You\'re saving &lt;font color="#7ed321"&gt;&#x20B9; %.2f&lt;/font&gt;</string>
    <string name="action_list_orders">View Orders</string>
    <string name="action_view_menu">Menu</string>
    <string name="session_presence_private">Private</string>
    <string name="session_presence_public">Public</string>
    <string name="action_invoice">Invoice</string>
    <string name="shop_invoice_title">Invoice</string>
    <string name="action_checkins">Checkins</string>
    <string name="action_discount">Discount</string>
    <string name="action_tax_discount_description">Apply discount on the bill to retain customers. Discount applies to a subtotal of the bill.</string>
    <string name="description_shop_finance_discount">**This discount percentage is applied to every bill, though you can change the discount totalAmount for the individual bill during checkout.**</string>
    <string name="waiter">Waiter</string>
    <string name="call_waiter">Call Waiter</string>
    <string name="table_cleaning">Table Cleaning</string>
    <string name="refill_glass">Refill Glass</string>
    <string name="title_how_can_we_assist_you">How can we assist you?</string>
    <string name="chat_with_us">Chat With Us</string>
    <string name="title_your_request">Your Request</string>
    <string name="napkin">Napkin</string>
    <string name="salt">Salt</string>
    <string name="sauce">Sauce</string>
    <string name="delay">Delay</string>
    <string name="quality">Quality</string>
    <string name="title_bill_details">Bill Details</string>
    <string name="total">Total</string>
    <string name="title_request_checkout">Request Checkout</string>
    <string name="title_pay_checkout">Pay</string>
    <string name="change">Change</string>
    <string name="title_tip_your_waiter">Tip your waiter</string>
    <string name="msg_call_waiter">Please send the waiter to our table</string>
    <string name="msg_clean_table">Please clean the table</string>
    <string name="msg_refill_glass">Please refill glasses</string>
    <string name="waiter_unassigned">Unassigned</string>
    <string name="your_friends_can_join_by_scanning_qr_code">Your friends can join your session by scanning the QR Code</string>
    <string name="recommendation_coming_soon">Recommendation of dishes coming soon</string>
    <string name="pending_request">(Pending Request)</string>
    <string name="accept_request">Accept Request</string>
    <string name="session_inform_requested_checkout">Requested Checkout</string>
    <string name="session_requested_checkout">Your checkout request has been sent.\n Waiter is coming to you soon</string>
    <string name="session_payment_mode_via_cash">Via Cash</string>
    <string name="status_order_open">Not Accepted</string>
    <string name="status_order_cancelled">Order Cancelled</string>
    <string name="status_cancelled">Cancelled</string>
    <string name="status_order_in_progress">In Progress</string>
    <string name="status_order_delivered">Delivered</string>
    <string name="header_shop_discount_total">Total discount disbursed in last 30 days</string>
    <string name="heading_shop_finance_discount">Apply Discount</string>
    <string name="heading_shop_finance_tax">Tax Details</string>
    <string name="description_shop_finance_tax_change">**Contact us for changes in tax.**</string>
    <string name="title_table_status">Table Status</string>
    <string name="label_payable_amount">Payable Amount</string>
    <string name="select">Select</string>
    <string name="link">Link</string>
    <string name="label_orders">Orders</string>
    <string name="label_new">New</string>
    <string name="confirm">Confirm</string>
    <string name="reject">Reject</string>
    <string name="label_done">Done</string>
    <string name="shop_manager_table_statics_title_description">Understand ongoing the food trend of your customer. And get an insight into sales for the day.</string>
    <string name="title_rated">Rated</string>
    <string name="title_follow">Follow</string>
    <string name="title_uploaded_by">Uploaded by</string>
    <string name="label_paid_via">Paid Via</string>
    <string name="title_switch_table">Switch Table</string>
    <string name="label_review_write">Write a review</string>
    <string name="label_share_your_experience">Share your experience</string>
    <string name="title_ratings">Ratings</string>
    <string name="title_food_quality">Food Quality</string>
    <string name="title_ambience">Ambience</string>
    <string name="title_service_hospitality">Service/Hospitality</string>
    <string name="add_image">Add Images</string>
    <string name="title_request">Request</string>
    <string name="title_approve">Approve</string>
    <string name="coming_soon">Feature coming soon.</string>
    <string name="menu_waiter_orders_taken">Orders Taken: %s</string>
    <string name="menu_waiter_total_tip">Total Tip: %s</string>
    <string name="license_agreement"><u>Terms &amp; Condition.</u></string>
    <string name="error_required_agree_eula"><![CDATA[Need to accept Terms & Condition]]></string>
    <string name="no_order">relax!\nwe will\nnotify about</string>
    <string name="activate_fetch_live_order">activate!\nto fetch\n<font color="#af1014">live orders</font></string>
    <string name="session_benefits_apply_promo_code">Apply Promo Code</string>
    <string name="title_order_details">Order Details</string>
    <string name="order_summary">Order Summary</string>
</resources>