<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/translucent_pinkish_grey"
    android:gravity="center"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bordered_text_light_grey"
        android:orientation="vertical">

    <TextView
        style="@style/RedTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/spacing_small"
        android:textAllCaps="true"
        android:text="@string/app_old_version_dialog_title" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_horizontal_line"
            android:layout_marginTop="@dimen/spacing_small"
            android:background="@color/brownish_grey"/>

    <TextView
        style="@style/GreyTextStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_small"
        android:text="@string/app_old_version_dialog_message" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_small"
        android:layout_marginBottom="@dimen/spacing_small">

        <Button
            android:id="@+id/btn_update_app_cancel"
            style="@style/ButtonNeutralAction"
            android:layout_width="0dp"
            android:layout_height="@dimen/button_height_normal"
            android:layout_weight="0.5"
            android:text="@string/btn_cancel"/>

        <Button
            android:id="@+id/btn_update_app_ok"
            style="@style/ButtonPositiveAction"
            android:layout_width="0dp"
            android:layout_height="@dimen/button_height_normal"
            android:layout_weight="0.5"
            android:text="Ok"/>

    </LinearLayout>

    </LinearLayout>

</LinearLayout>